generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum QuizStatus {
  DRAFT
  COMPLETED
}

enum Gender {
  FEMALE
  MALE
  NON_BINARY
  PREFER_NOT_TO_SAY
}

enum FitnessGoal {
  LOSE_WEIGHT
  BUILD_STRENGTH
  IMPROVE_MOBILITY
  FEEL_HEALTHIER
}

enum ActivityFrequency {
  SEDENTARY
  LIGHT
  MODERATE
  ACTIVE
  ATHLETE
}

enum SubscriptionStatus {
  FREE
  ACTIVE
  PAST_DUE
  CANCELLED
}

enum PaymentStatus {
  SUCCEEDED
  FAILED
}

model User {
  id          String         @id @default(cuid())
  clientToken String         @unique
  email       String?
  createdAt   DateTime       @default(now())
  updatedAt   DateTime       @updatedAt
  sessions    QuizSession[]
  assessments Assessment[]
  subscription Subscription?

  @@index([createdAt])
}

model QuizSession {
  id                String             @id @default(cuid())
  userId            String
  user              User               @relation(fields: [userId], references: [id], onDelete: Cascade)
  status            QuizStatus          @default(DRAFT)
  currentStep       String              @default("gender")
  completedSteps    String[]            @default([])
  gender            Gender?
  primaryGoal       FitnessGoal?
  age               Int?
  heightCm          Decimal?            @db.Decimal(5, 2)
  weightKg          Decimal?            @db.Decimal(5, 2)
  targetWeightKg    Decimal?            @db.Decimal(5, 2)
  activityFrequency ActivityFrequency?
  healthContext     Json?
  completedAt       DateTime?
  createdAt         DateTime            @default(now())
  updatedAt         DateTime            @updatedAt
  assessment        Assessment?

  @@index([userId, status])
  @@index([updatedAt])
}

model Assessment {
  id              String      @id @default(cuid())
  sessionId       String      @unique
  session         QuizSession @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  userId          String
  user            User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  bmi             Decimal     @db.Decimal(4, 1)
  bmiCategory     String
  bmr             Int
  dailyCalories   Int
  estimatedWeeks  Decimal     @db.Decimal(5, 1)
  targetDate      DateTime
  targetWeightKg  Decimal     @db.Decimal(5, 2)
  recommendation  Json
  predictionCurve Json
  createdAt       DateTime    @default(now())
  updatedAt       DateTime    @updatedAt

  @@index([userId])
}

model Subscription {
  id               String             @id @default(cuid())
  userId           String             @unique
  user             User               @relation(fields: [userId], references: [id], onDelete: Cascade)
  status           SubscriptionStatus @default(FREE)
  provider         String             @default("mock")
  currentPeriodEnd DateTime?
  createdAt        DateTime           @default(now())
  updatedAt        DateTime           @updatedAt
  paymentEvents    PaymentEvent[]

  @@index([status])
}

model PaymentEvent {
  id             String        @id @default(cuid())
  subscriptionId String
  subscription   Subscription  @relation(fields: [subscriptionId], references: [id], onDelete: Cascade)
  sessionId      String?
  idempotencyKey String        @unique
  amountCents    Int
  currency       String        @default("CNY")
  status         PaymentStatus @default(SUCCEEDED)
  rawPayload     Json
  createdAt      DateTime      @default(now())

  @@index([subscriptionId])
  @@index([sessionId])
}
